skins/Belchertown/style.css
/* ... */
.current_temp {
  padding-top: 20px;
}

.current_temp h1 {
  font-size: 40px;
}

.feelslike {
  text-align: center;
  font-size: 18px;
}

.stn-high-low {
  padding-top: 15px;
  padding-bottom: 15px;
  font-size: 15px;
  line-height: 1.3;
}

.stn-high-low-table td {
  text-align: center;
  width: 50%;
}

.obs-wind-divider {
  height: 1px;
  width: 386px;
  background-color: #d7d7d7;
}

.windrow {
  /* margin-top: 25px; */
  /* box-sizing: border-box; */
  border-top: 1px solid #d7d7d7;
  padding-top: 10px;
  /* padding-right: 15px; */
  /* margin: 0 -15px 0 -15px; */
  margin: -1px 0 0 0;
  /* width: 105%;	*/
}

.curwind {
  margin-top: -10px;
  line-height: initial;
}

.current_wind {
  /* padding:20px 0px 0px 0px !important; */
  padding: 10px 0px 0px 0px !important;
}

.windspeedtable {
  padding-top: 10px;
}

.wind-arrow-container {
  margin-top: -8px;
  margin-bottom: 5px;
}

.wind-arrow {
  font-size: 50px !important;
  padding: 3px 18px 0px 15px;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  color: #808080;
  border: 3px solid #808080;
  behavior: url(PIE.htc);
  /* remove if you don't care about IE8 */
  transition: -webkit-transform 1s ease-in;
}

/* https://codepen.io/xixao/pen/OPovyN */
.compass {
  display: block;
  width: 100px;
  height: 100px;
  border-radius: 100%;
  position: relative;
  color: #555;
  border: solid #808080 5px;
  margin-left: 60px;
  /* margin-top: -10px; */
  margin: 0 auto;
}

.compass:before {
  font-weight: bold;
  position: absolute;
  text-align: center;
  width: 100%;
  font-size: 14px;
  top: -2px;
}

.direction {
  height: 100%;
  width: 100%;
  display: block;
  /* background: #f2f6f5; */
  /* background: -moz-linear-gradient(top, #f2f6f5 0%, #cbd5d6 100%); */
  /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #f2f6f5), color-stop(100%, #cbd5d6)); */
  /* background: -webkit-linear-gradient(top, #f2f6f5 0%, #cbd5d6 100%); */
  /* background: -o-linear-gradient(top, #f2f6f5 0%, #cbd5d6 100%); */
  border-radius: 100%;
}

.direction .curwinddir {
  font-size: 25px;
  padding-top: 22px;
  display: block;
}

.direction .curwinddeg {
  font-size: 21px;
}

.arrow {
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  top: 0;
  transition: -webkit-transform 1s ease-in;
}

.arrow:after {
  content: "";
  width: 0;
  height: 0;
  /* border-left: 5px solid transparent; */
  /* border-right: 5px solid transparent; */
  /* border-bottom: 10px solid red; */
  /* top: -6px; */
  /* left: 50%; */
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  /* border-bottom: 21px solid red; */
  /* border-top: 21px solid red; */
  border-top: 21px solid #c50a1d;
  position: absolute;
  top: -10px;
  left: 38px;
  /* margin-left: -5px; */
  z-index: 99;
}

.wind-table td {
  text-align: center !important;
  width: 50%;
}

.windtext {
  font-size: 20px;
}

.curwindspeed,
.curwindgust {
  font-size: 30px;
}

.mph {
  padding-top: 10px !important;
  font-size: 18px !important;
}

.wind-table .beaufort {
  padding-top: 8px;
  padding-bottom: 8px;
  font-size: 16px;
}

.wx-pressure-trend {
  color: #808080;
  font-size: 20px;
  line-height: 1;
  padding-left: 5px;
}

.barometer-up {
  transform: rotate(45deg);
}

.barometer-down {
  transform: rotate(315deg);
}

.small-almanac {
  /* padding-top:5px; */
  border-top: 1px solid #d7d7d7;
  /* padding:15px; */
  padding: 0px 15px 0px;
  margin: 0 -15px 0 -15px;
}

.sun,
.moon {
  padding: 0px !important;
}

.sunrise-set-image {
  width: 20px;
  margin-right: 5px;
}

.sun-moon-title {
  font-size: 25px;
  text-align: left;
  padding-bottom: 5px;
}

.sun-moon-modal {
  display: inline-block;
  font-size: 20px;
}

.daylight-change {
  width: 100%;
  text-align: center;
  font-size: 15px;
  display: block;
}

.page .sun-moon-modal a {
  text-decoration: none;
}

/* Flip the weather icons for southern hemisphere */
.southern-hemisphere {
  -moz-transform: scale(-1, 1);
  -webkit-transform: scale(-1, 1);
  -o-transform: scale(-1, 1);
  -ms-transform: scale(-1, 1);
  transform: scale(-1, 1);
}

.light .label {
  color: #333 !important;
}

.celestial_body {
  display: inline-block;
  margin-right: 22px;
}

table.celestial td.label {
  min-width: 140px !important;
  display: inline-block;
  text-align: left;
  font-size: initial;
}

/* Scroll issue in dark mode https://stackoverflow.com/a/54196631/1177153 */
.modal {
  overflow-y: auto !important;
}

.moon-container {
  font-size: 15px;
  color: #808080;
}

.moon {
  text-align: right;
}

.moon-icon {
  font-size: 20px;
}

.radar-map {
  padding: 5px 5px 0px 5px !important;
}

.forecastrow {
  text-align: center;
}

.row-no-padding {
  padding-left: 0 !important;
  padding-right: 0 !important;
}

.earthquake-container {
  font-size: 18px;
  text-align: center;
  min-height: 180px;
}

.earthquake-container .earthquake-distance-outer {
  min-height: 64px;
}

.snapshot-records-text,
.eq-title {
  font-size: 24px;
  text-align: center;
  margin: 10px 0px;
}

.stats-title {
  font-size: 20px;
}

.eq-source {
  font-size: 12px;
}

.wx-graph-front {
  font-size: 24px;
  padding-top: 30px;
  /* font-size:25px; */
  /* padding-top:10px; */
  padding-bottom: 10px;
  text-align: center;
}

.graph-outer {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}

/* span.highcharts-title { */
/* width: 100% !important; */
/* text-align: center !important; */
/* } */

.wx-buttons {
  margin: 0 auto;
  text-align: center;
  margin-top: 20px;
  line-height: 40px;
}

.wx-buttons-description {
  font-size: 30px;
  font-weight: 400;
  text-align: center;
  padding: 10px 0px;
}

.wx-records-description {
  margin: 25px 0px;
}

.records table {
  border: 1px solid #d7d7d7;
}

.records td {
  padding: 0px 10px;
}

.records .leftborder {
  border-left: 1px solid #d7d7d7;
}

.records-header {
  text-align: center;
  background: #d7d7d7;
  color: #000;
  font-weight: 400;
}
/* ... */

